SN-18 Added getuserprofile posts partially
